Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  labels:
    app: chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: sanan3946/chat-app:registery
        ports:
        - containerPort: 8081
