pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: chat-app
spec:
  containers:
  - name: chat-app
    image: chat-app:v1
    ports:
    - containerPort: 8081
