service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service # app name
spec:
  type: NodePort
  selector:
    app: chat-app # label name
  ports:
  - port: 80 # port of service
    targetPort: 8081 # port of pod
    nodePort: 30000 # port of node
